reference-llvm/tests/should-fail/fail1.mu
// multiple @entry

function @entry foo() {
    ;
}

function @entry bar() {
    ;
}
